Upgrade Java to version 21 with OpenRewrite migration recipe